welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:13: error: '=>' expected but ';' found.
			case "R" ==> droite(); avance();
                                             ^BDR2:14: error: '=>' expected but ';' found.
			case "L" ==> gauche(); avance();
                                             ^BDR2:15: error: '=>' expected but ';' found.
			case "I" ==> retourne(); avance();
                                               ^BDR2:16: error: '=>' expected but ';' found.
			case "A" ==> avance(); 
                                             ^BDR2:17: error: '=>' expected but ';' found.
			case "B" ==> avance(); avance();
                                             ^BDR2:18: error: '=>' expected but ';' found.
			case "C" ==> avance(); avance(); avance();
                                             ^BDR2:19: error: '=>' expected but ';' found.
			case "D" ==> avance(); avance(); avance(); avance();
                                             ^BDR2:20: error: '=>' expected but ';' found.
			case "E" ==> avance(); avance(); avance(); avance(); avance();
                                             ^BDR2:21: error: '=>' expected but ';' found.
			case "F" ==> avance(); avance(); avance(); avance(); avance(); avance();
                                             ^BDR2:22: error: '=>' expected but ';' found.
			case "Z" ==> recule();
                                             ^BDR2:23: error: '=>' expected but ';' found.
			case "Y" ==> recule(); recule();
                                             ^BDR2:24: error: '=>' expected but ';' found.
			case "X" ==> recule(); recule(); recule();
                                             ^BDR2:25: error: '=>' expected but ';' found.
			case "W" ==> recule(); recule(); recule(); recule();
                                             ^BDR2:26: error: '=>' expected but ';' found.
			case "V" ==> recule(); recule(); recule(); recule(); recule();
                                             ^BDR2:27: error: '=>' expected but ';' found.
			case "U" ==> recule(); recule(); recule(); recule(); recule(); recule();
                                             ^BDR2:28: error: '=>' expected but '=' found.
			case _   ==> fini = true;
                                          ^